fixed alignment issue

--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@ html{
 	margin-left: auto;
 	margin-right: auto;
 	position: relative;
-	max-height: 800px;
 }
 
 body{
@@ -147,7 +146,7 @@ p{
 }
 
 #milennium{
-	top: 83.5%;
+	top: 78.5%;
 	left: 9%;
 }
 
